Archive2/36/efba25d50a9f3f/output
main.cpp:7:27: error: member 'MyTemplateType' declared as a template
        template<class T> MyTemplateType = std::vector<T>;
        ~~~~~~~~~~~~~~~~~ ^
main.cpp:13:65: error: 'MyTemplateType' following the 'template' keyword does not refer to a template
        template<class T> using MyTType = typename MC::template MyTemplateType<T>;
                                                                ^~~~~~~~~~~~~~
main.cpp:23:27: note: in instantiation of template class 'MyOtherClass<MyClass>' requested here
    MyOtherClass<MyClass> x;
                          ^
2 errors generated.
